// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IdeasIndexHeader /> should render empty container when description is not provided 1`] = `
<div
  className="container container--custom"
  style={
    Object {
      "display": "none",
    }
  }
/>
`;

exports[`<IdeasIndexHeader /> should render ideas index description when provided 1`] = `
<div
  className="container container--custom"
  style={
    Object {
      "display": "block",
    }
  }
>
  <FormattedHTMLMessage
    message="<p>blabla</p>"
    tagName="span"
  />
</div>
`;
